case smell fixes